// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> Generated Snapshots AdjustedWidth story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r1k:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1m:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1k: headlessui-listbox-button-:r1l:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1l:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Default story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r0:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r2:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r0: headlessui-listbox-button-:r1:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Error story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-96"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r26:"
    >
      Favorite Animal
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Required)
    </span>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r28:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r26: headlessui-listbox-button-:r27:"
    class="select-button select-button--error"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r27:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots HorizontalLabel story renders snapshot 1`] = `
<div
  class="select select--label-layout-horizontal w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r6:"
    >
      Animal?
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r8:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r6: headlessui-listbox-button-:r7:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r7:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots MultipleWithTruncation story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r1e:"
    >
      Favorite Animal(s)
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1g:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1e: headlessui-listbox-button-:r1f:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1f:"
    type="button"
  >
    <span
      class="select-button__text--truncated"
    >
      1
       long selected description
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots NoVisibleLabel story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r2j:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r2i:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots NoVisibleLabelButRequired story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-96"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline select__overline--no-label"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r2n:"
    />
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r2p:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r2n: headlessui-listbox-button-:r2o:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r2o:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Optional story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-96"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r20:"
    >
      Favorite Animal
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Optional)
    </span>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r22:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r20: headlessui-listbox-button-:r21:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r21:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Required story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-96"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r1q:"
    >
      Favorite Animal
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Required)
    </span>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r1s:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r1q: headlessui-listbox-button-:r1r:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r1r:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots StyledUncontrolled story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r1a:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r19:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots UncontrolledHeadless story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-:r15:"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="fpo"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r14:"
    type="button"
  >
    🐶🐕🐩
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots Warning story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-96"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:r2c:"
    >
      Favorite Animal
    </label>
    <span
      class="text text--body-sm select__required-text"
    >
      (Optional)
    </span>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r2e:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:r2c: headlessui-listbox-button-:r2d:"
    class="select-button select-button--warning"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:r2d:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithFieldName story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:ro:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:rq:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ro: headlessui-listbox-button-:rp:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rp:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithFieldNote story renders snapshot 1`] = `
<div
  class="select select--has-fieldNote select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:ru:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:r10:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ru: headlessui-listbox-button-:rv:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rv:"
    type="button"
  >
    <span
      class=""
    >
      Dogs
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithSelectedOption story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:ri:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:rk:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:ri: headlessui-listbox-button-:rj:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rj:"
    type="button"
  >
    <span
      class=""
    >
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;

exports[`<Select /> Generated Snapshots WithStandardButton story renders snapshot 1`] = `
<div
  class="select select--label-layout-vertical"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <div
    class="select__overline"
  >
    <label
      class="label label--lg select__label"
      data-headlessui-state="open"
      id="headlessui-listbox-label-:rc:"
    >
      Favorite Animal
    </label>
  </div>
  <button
    aria-controls="headlessui-listbox-options-:re:"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-:rc: headlessui-listbox-button-:rd:"
    class="select-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-:rd:"
    type="button"
  >
    <span
      class=""
    >
      - Select Option -
    </span>
    <svg
      aria-hidden="true"
      class="icon select-button__icon select-button__icon--reversed"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
</div>
`;
